--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -20,28 +20,28 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>California, Arizona...</h4>
+		<h4>Istanbul, Ankara..</h4>
                 <div class="popover">
-                    <h2>Arizona:</h2>
+                    <h2>Istanbul:</h2>
                     <ul>
-                        <li>Page</li>
-                        <li>Page2</li>
+                        <li>Fatih</li>
+                        <li>Beykoz</li>
                     </ul>
-                    <h2>California:</h2>
+                    <h2>Ankara</h2>
                     <ul>
-                        <li>San Francisco</li>
+                        <li>Çankaya</li>
                     </ul>
                 </div>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Internet, Kitchen...</h4>
+                <h4>Garden view, Kitchen...</h4>
                 <div class="popover">
                     <ul>
                         <li>Internet</li>
                         <li>TV</li>
                         <li>Kitchen</li>
-                        <li>Iron</li>
+                        <li>Fire pit</li>
                     </ul>
                 </div>
             </div>
