--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="#"></a>
+        <a href="#" class="logo"></a>
     </header>
 
     <div class="container">
