--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/3-footer.css">
 </head>
 <body>
-    <header><a href="#"></a></header>
+    <header><a href="#" class="logo"></a></header>
     <div class="container"></div>
     <footer>Best School</footer>
 </body>
