--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="#"></a>
+        <a href="#" class="logo"></a>
     </header>
 
     <div class="container">
