--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="#"></a>
+        <a href="#" class="logo"></a>
     </header>
 
     <div class="container">
