--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
 	<link rel="icon" href="images/icon.png">
-	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="stylesheet" href="styles/4-filters.css">
 </head>
 <body>
 	<header>
 	</header>
+
+	<div class="container">
+		<section class="filters">
+			<button>Search</button>
+		</section>
+	</div>
 
 	<footer>
 		Best School
