--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/5-filters.css">
+	<link rel="stylesheet" href="styles/6-filters.css">
 </head>
 <body>
 	<header>
@@ -19,10 +19,32 @@
 			<div class="locations">
 				<h3>States</h3>
 				<h4>California, Arizona...</h4>
+				<ul class="popover">
+					<li><h2>Arizona:</h2></li>
+					<li>
+						<ul>
+							<li>page</li>
+							<li>page2</li>
+						</ul>
+					</li>
+					<li><h2>California:</h2></li>
+					<li>
+						<ul>
+							<li>San Francisco</li>
+							<li>Los Altos</li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 			<div class="amenities">
 				<h3>Amenities</h3>
 				<h4>Internet, Kitchen...</h4>
+				<ul class="popover">
+						<li>Internet</li>
+						<li>TV</li>
+						<li>Kitchen</li>
+						<li>Iron</li>
+				</ul>
 			</div>
 			<button>Search</button>
 		</section>
