--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/6-filters.css">
-	<link rel="stylesheet" href="styles/8-places.css">
+	<link rel="stylesheet" href="styles/100-places.css">
 </head>
 <body>
 	<header>
@@ -67,6 +67,27 @@
 				<div class="description">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at ligula at metus finibus semper. Etiam a erat quis quam commodo volutpat fringilla eu odio. Aenean cursus dui sit amet arcu semper, vitae ullamcorper tortor elementum. Cras semper nisi ipsum, ac dictum neque laoreet sit amet.</p>
 				</div>
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li><img src="images/icon_tv.png" alt="TV">TV</li>
+						<li><img src="images/icon_wifi.png" alt="wifi">WIFI</li>
+						<li><img src="images/icon_pets.png" alt="pet">Pet friendly</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>2 Reviews</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2017</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi </p>
+						</li>
+						<li>
+							<h3>From Bill Zuckerberg the 2nd Fanua 2015</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur  </p>
+						</li>
+					</ul>
+				</div>
 			</article>
 			<article>
 				<h2>Tiny house</h2>
@@ -84,6 +105,21 @@
 				<div class="description">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at ligula at metus finibus semper. Etiam a erat quis quam commodo volutpat fringilla eu odio. Aenean cursus dui sit amet arcu semper, vitae ullamcorper tortor elementum. Cras semper nisi ipsum, ac dictum neque laoreet sit amet. Sed turpis elit, congue nec odio quis, venenatis tincidunt ligula. Aliquam erat volutpat. Sed sit amet ligula pulvinar, consectetur velit vitae, facilisis augue. Maecenas vulputate hendrerit libero ac auctor. Fusce et tincidunt est. Praesent at laoreet turpis, sed viverra nunc.</p>
 				</div>
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li><img src="images/icon_pets.png" alt="pet">Pet friendly</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>1 Reviews</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2017</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at ligula at metus finibus semper. Etiam a erat quis quam commodo volutpat fringilla eu odio. Aenean cursus dui sit amet arcu semper, vitae ullamcorper tortor elementum. Cras semper nisi ipsum, ac dictum neque laoreet sit amet. Sed turpis elit, congue nec odio quis, venenatis tincidunt ligula. Aliquam erat volutpat. Sed sit amet ligula pulvinar,</p>
+						</li>
+					</ul>
+				</div>
 			</article>
 			<article>
 				<h2>A suite</h2>
@@ -100,6 +136,27 @@
 				</div>
 				<div class="description">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at ligula at metus finibus semper. Etiam a erat quis quam commodo volutpat fringilla eu odio. Aenean cursus dui sit amet arcu semper, vitae ullamcorper tortor elementum. Cras semper nisi ipsum, ac dictum neque laoreet sit amet. Sed turpis elit, congue nec odio quis, venenatis tincidunt ligula. Aliquam erat volutpat. Sed sit amet ligula pulvinar, consectetur velit vitae, facilisis augue. Maecenas vulputate hendrerit libero ac auctor. Fusce et tincidunt est. Praesent at laoreet turpis, sed viverra nunc.</p>
+				</div>
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li><img src="images/icon_tv.png" alt="TV">TV</li>
+						<li><img src="images/icon_wifi.png" alt="wifi">WIFI</li>
+						<li><img src="images/icon_pets.png" alt="pet">Pet friendly</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>2 Reviews</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2017</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi </p>
+						</li>
+						<li>
+							<h3>From Bill Zuckerberg the 2nd Fanua 2015</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur  </p>
+						</li>
+					</ul>
 				</div>
 			</article>
 		</section>
